test/Fail/QualifiedDoNoBind.agda
module QualifiedDoNoBind where

module X where

_ : Set₁
_ = X.do
  Set
  Set
